src/Base/main/default/objects/ProductRequired/fields/IsHandoutComplete__c.field-meta.xml
<CustomField>
    <fullName>IsHandoutComplete__c</fullName>
    <formula>QuantityRequired =  QuantityHandedOut__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Handout Complete</label>
    <type>Checkbox</type>
</CustomField>