src/Base/main/default/objects/ProductRequired/fields/IsPickAndPackComplete__c.field-meta.xml
<CustomField>
    <fullName>IsPickAndPackComplete__c</fullName>
    <formula>QuantityRequired = QuantityPickAndPack__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Pick and Pack Complete</label>
    <type>Checkbox</type>
</CustomField>