src/Base/main/default/objects/ProductRequired/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>AcctSeedERP__Material__c</referenceTo>
    <relationshipLabel>Products Required</relationshipLabel>
    <relationshipName>Products_Required</relationshipName>
    <type>Lookup</type>
</CustomField>