src/Base/main/default/objects/ProductRequired/fields/Product_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Product_Transfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Transfer</label>
    <referenceTo>ProductTransfer</referenceTo>
    <relationshipLabel>Products Required</relationshipLabel>
    <relationshipName>Products_Required</relationshipName>
    <type>Lookup</type>
</CustomField>