src/Base/main/default/objects/ProductRequired/fields/Quantity_Handed_Out__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Handed_Out__c</fullName>
    <description>The quantity that has been handed out to a Technician</description>
    <label>Quantity Handed Out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>