src/Base/main/default/objects/ProductRequired/fields/QuantityPickAndPack__c.field-meta.xml
<CustomField>
    <fullName>QuantityPickAndPack__c</fullName>
    <description>The quantity moved too Pick and Pack</description>
    <label>Quantity Pick and Pack</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>